--- a/frontend/src/components/topbar/topbar.css
+++ b/frontend/src/components/topbar/topbar.css
@@ -25,6 +25,8 @@
     height:45px;
     width:45px;
     border-radius: 100%;
+    object-fit: cover;
+    cursor: pointer;
 }
 .logo{
     font-size: 24px;
@@ -74,5 +76,19 @@
     margin-right: 10px;
     position: relative;
     cursor: pointer;
-    height: 30px !important ;
+    height: 25px !important ;
+}
+.iconBadge{
+    width: 15px;
+    height: 15px;
+    background-color: red;
+    border-radius: 50%;
+    color: white;
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
 }
