--- a/frontend/src/components/sidebar/sidebar.css
+++ b/frontend/src/components/sidebar/sidebar.css
@@ -1,7 +1,61 @@
 .sidebar{
-    flex:3.5;
+    flex:3.0;
     height: calc(100vh - 50px);
+    overflow: hidden;
+    position: sticky;
+}
+.sidebar:hover{
+    overflow-y: scroll;
+}
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollbar-track{
+    background-color:rgb(243, 235, 225);
+}
+::-webkit-scrollbar-thumb{
+    background-color: rgb(167, 160, 160);
 }
 .sidebarWrapper{
-    padding: 15px;
+    padding: 20px;
+}
+.sidebarList{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.sidebarListItem{
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.sidebarIcon{
+    margin-right: 10px;
+}
+.sidebarButton{
+    width: 150px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 500;
+    padding: 10px;
+}
+.sidebarHr{
+    margin: 12px 0px;
+}
+.sidebarFriendList{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.sidebarFriend{
+    display: flex;
+    align-items: center;
+    margin: 20px 0px;
+}
+.sidebarFriendImg{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
 }
