--- a/frontend/src/components/post/post.css
+++ b/frontend/src/components/post/post.css
@@ -5,11 +5,15 @@
     -moz-box-shadow: -1px 1px 12px -4px rgba(0,0,0,0.75);
     box-shadow: -1px 1px 12px -4px rgba(0,0,0,0.75);
     margin: 30px 0;
+    font-weight: 400;
 }
 .postTop{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.postWrapper{
+    padding: 10px;
 }
 .postTopLeft{
     display: flex;
@@ -23,9 +27,45 @@
 }
 .postUsername{
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 600;
     margin: 0 10px;
 }
 .postDate{
     font-size: 12px;
+}
+.postBottomLeft{
+    display: flex;
+    align-items: center;
+}
+.likeIcon{
+    height: 24px;
+    width: 24px;
+    object-fit: cover;
+    margin-right: 3px;
+    cursor: pointer;
+}
+.postCenter{
+    margin: 17px 0;
+}
+.postImg{
+    margin-top:20px ;
+    width: 100%;
+    max-height: 500px;
+    object-fit: contain;
+    background-color: black;
+}
+.postBottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.postLikeCounter{
+    font-size: 15px;
+}
+.postCommentText{
+    cursor: pointer;
+    font-size: 15px;
+}
+.postText{
+    font-size: 14px;
 }
