--- a/frontend/src/components/rightbar/rightbar.css
+++ b/frontend/src/components/rightbar/rightbar.css
@@ -1,3 +1,65 @@
 .rightbar{
     flex:3.5;
+    /* overflow-y: scroll; */
+    height: calc(100vh - 50px);
+    /* overflow-y: scroll; */
+    position: sticky;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.rightbarWrapper{
+    padding: 20px 46px 0 0;
+}
+.birthdayImg{
+    height: 40px;
+    width: 40px;
+    margin-right: 7px;
+}
+.birthdayText{
+    font-weight: 300;
+    font-size: 15px;
+}
+.birthdayContainer{
+    display: flex;
+    align-items: center;
+}
+.rightbarAd{
+    width: 100%;
+    border-radius: 10px;
+    margin: 30px 0 ;
+}
+.onlineFreindList{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.rightbarFriend{
+    display: flex;
+    margin-bottom: 15px;
+    align-items: center;
+}
+.rightbarProfilePicContainer{
+    margin-right: 10px;
+    position: relative;
+}
+.rightbarProfileImg{
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.rightbarOnline{
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    position: absolute;
+    background-color: green;
+    top: -1.5px;
+    right: 0;
+    border: 2px solid white;
+}
+.rightbarTitle{
+    margin-bottom: 20px;
 }
