--- a/frontend/src/components/topbar/topbar.css
+++ b/frontend/src/components/topbar/topbar.css
@@ -5,7 +5,9 @@
     display: flex;
     align-items: center;
     position: sticky;
-    top: 0;
+    position: -webkit-sticky;
+    top: 0; /* required */
+    z-index: 1;
 }
 
 .topbarLeft{
