--- a/frontend/src/components/rightbar/rightbar.css
+++ b/frontend/src/components/rightbar/rightbar.css
@@ -1,13 +1,24 @@
 .rightbar{
     flex:3.5;
-    /* overflow-y: scroll; */
     height: calc(100vh - 50px);
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
     position: sticky;
     top: 50px;
     bottom: 0;
     left: 0;
     right: 0;
+    padding-right: 7px;
+}
+
+.rightbar::-webkit-scrollbar{
+    width: 7px;
+}
+.rightbar::-webkit-scrollbar-track{
+    background-color:rgb(243, 235, 225);
+}
+.rightbar::-webkit-scrollbar-thumb{
+    background-color: rgb(167, 160, 160);
+    border-radius: 12px;
 }
 .rightbarWrapper{
     padding: 20px 46px 0 0;
