--- a/frontend/src/components/rightbar/rightbar.css
+++ b/frontend/src/components/rightbar/rightbar.css
@@ -74,3 +74,41 @@
 .rightbarTitle{
     margin-bottom: 20px;
 }
+.rightbarInfoTitle{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.rightbarFollowingImg{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.rightbarInfo{
+    margin-bottom: 30px;
+}
+.rightbarInfoItem{
+    margin-bottom: 10px;
+}
+.rightbarInfoKey{
+    font-weight: 600;
+    margin-right: 15px;
+    color:#555;
+   
+}
+.rightbarInfoValue{
+    font-weight: lighter;
+    color:#555;
+}
+.rightbarFollowings{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+}
+.rightbarFollowing{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    margin-bottom: 4px;
+}
